--- a/게임서버프로그래밍교과서/멀티스레딩/멀티스레딩.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/멀티스레딩.md
@@ -148,7 +148,7 @@ int main() {
 
 이는 프로그램 개발자 측면에서 즐거운 일이 아니다. 기본적으로 스레드는 코어를 하나만 사용한다. 다시 말해 싱글스레드 프로그램은 컴퓨터의 CPU 코어 개수와 상관없이 1개만 쓴다. 나의 서버가 8코어 CPU를 장착했는데 싱글스레드로 게임 서버를 만든다면 서버는 전체 연산 성능의 1/8만 사용할 것이다. <br/>
 
-실제로 체크해보자. 
+실제로 체크해보자.
 ```c++
 
 // 소수 체크
@@ -187,6 +187,26 @@ int main() {
   PrintNumbers(primes);
 }
 ```
+오차가 존재하겠지만 4코어 8스레드 환경에서 위의 코드를 수행하면 수행하기 전보다 12.5%의 cpu 사용률의 증가된다. 논리 프로세서가 8개인 상황에서 싱글스레드로 작업을 수행하면 1개의 논리 프로세서가 풀 로드되고 전체(100%, 8개 풀 로드)로 봤을 때 12.5%이다. 실제로는 1개의 코어에서 쭉 수행되는 것이 아니라 여러 코어를 오가면서 수행된다.<br/>
+
+다시 본제로 돌아와서 이 경우 cpu를 모두 활용하지 못한다는 것이고 이를 해결하기 위해서 멀티스레드로 프로그램을 작성해야 한다. 여러 cpu를 사용해서 위의 프로그램을 만든다고 할 때 단순하게 생각하면 "일정한 크기만큼 분할해서 계산하면 되겠다"는 생각이 든다. 정수 1에서 100만까지 중에서 소수를 찾는다고 하면 아래와 같이 하게 된다.
+* CPU1 : 정수 1~25만 중에서 소수
+* CPU2 : 정수 25만~50만 중에서 소수
+* CPU3 : 정수 50만~75만 중에서 소수
+* CPU4 : 정수 75만~100만 중에서 소수
+
+그러나 이렇게 하면 CPU1이 먼저 끝나고 CPU4는 제일 늦게 끝날 것이다. 숫자가 클수록 소수 판별이 늦게 끝나니까. 물론 이 방법도 싱글 스레드 보다는 효율적이겠지만 CPU를 골고루 사용하는 방법과는 거리가 멀다.
+
+
+
+
+
+
+
+
+
+
+
 
 
 
