Update 1.4 스레드의 정체.md

--- a/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
@@ -11,24 +11,6 @@ CPU가 하나만 있는 기기라고 가정해보자. CPU는 하나인데 어떻
 
 앞서 언급했던 '로딩 중에 애니메이션을 뿌리는' 경우를 보자. 1초 당 한 번의 컨텍스트 스위치만 일어나게 한다면 애니메이션이 뚝뚝 끊겨서 보일 것이다. 그래서 컨텍스트 스위치는 기본적으로 '사람 입장에서 쾌적할 수 있는' 가급적 긴 시간 단위로 이루어진다. 이 시간 단위를 타임 슬라이스(time slice)라고 한다. 운영체제나 cpu 같은 환경에 따라 다르지만 보통 스레드 하나가 일시 정지했다 다시 시작하는 데까지 걸리는 시간은 약 5ms 이다. 사람 입장에서는 갑갑함을 느끼지 않을 만큼 짧은 시간이지만, 컴퓨터 입장에서는 초당 5억 개의 명령어를 처리할 수 있는 cpu라면 250만 개(5억 * 5/1000)의 명령어를 처리할 수 있는 시간이다.<br/>
 
-### 컨텍스트 스위치가 언제 일어나는가
-컴퓨터가 실행하는 명령어는 기본적으로 기계어 명령어 단위로 실행한다. 컨텍스트 스위치도 마찬가지이다. 다시 말해 기계어 명령어를 수행하다 말고 컨텍스트 스위칭을 하지 않는다. 한 기계어 명령어를 다 수행하고 나서 컨텍스트 스위치를 한다.<br/>
-
-C++로 프로그래밍을 하는 경우, 한 구문은 기계 명령어 여러 개로 컴파일 되고 이 말은 우리 프로그램의 소스 코드 한 줄을 수행하는 도중에 컨텍스트 스위치가 발생할 수 있다는 것이다. 예를 들어 아래와 같은 C 구문이 있다.
-```c++
-b = a * 2;
-```
-이를 기계 명령어로 변경하면 아래와 같다.
-```
-// 여기서 r1, r2는 레지스터이고 a와 b는 메모리 공간
-(1) ...
-(2) r1 = a
-(3) r2 = r1 * 2
-(4) b = r2
-(5) ...
-```
-한 줄의 C++ 구문이 여러 기계 명령어로 되어 있을 수 있고 위의 기계어 과정에서 컨텍스트 스위치가 일어나는 구간이 항상 일정하다면(예: 4번 과정에서 5번 과정으로 넘어가는 구간에서만 발생) 큰 문제는 되지 않지만 실제로는 어디서 일어날 지 알 수가 없고 이것이 문제가 된다. 
-
 ### cpu 개수와 스레드 개수의 관계
 스레드 개수가 cpu 개수보다 적다면 컨텍스트 스위치가 일어날 이유가 없다. 하지만 실제로는 외부적인 요인으로 인해 컨텍스트 스위치를 하게 되고 작업 관리자를 열어 보면 스레드가 수천 개나 있는데 이 경우 성능 문제는 없을까. 그러려면 스레드 생명 주기에 대해서 알아야 한다.
 
@@ -65,15 +47,172 @@ b = a * 2;
   * t.detach() : 스레드를 백그라운드로 떼어내고 알아서 종료하게 둠
 * 위의 두 가지를 하지 않고 std::thread 객체가 파괴된다면 std::terminate()가 호출된다.
 
+### 컨텍스트 스위치가 언제 일어나는가
+컴퓨터가 실행하는 명령어는 기본적으로 기계어 명령어 단위로 실행한다. 컨텍스트 스위치도 마찬가지이다. 다시 말해 기계어 명령어를 수행하다 말고 컨텍스트 스위칭을 하지 않는다. 한 기계어 명령어를 다 수행하고 나서 컨텍스트 스위치를 한다.<br/>
+
+C++로 프로그래밍을 하는 경우, 한 구문은 기계 명령어 여러 개로 컴파일 되고 이 말은 우리 프로그램의 소스 코드 한 줄을 수행하는 도중에 컨텍스트 스위치가 발생할 수 있다는 것이다. 예를 들어 아래와 같은 C 구문이 있다.
+```c++
+a++;
+```
+이를 기계 명령어로 변경하면 아래와 같다.
+```
+// 여기서 r1, r2는 레지스터이고 a와 b는 메모리 공간
+// 레지스터에 값 적재, 연산, 메모리에 저장
+(1) ...
+(2) r1 = a
+(3) r2 = r1 + 1
+(4) a = r2
+(5) ...
+```
+한 줄의 C++ 구문이 여러 기계 명령어로 되어 있을 수 있고 위의 기계어 과정에서 컨텍스트 스위치가 일어나는 구간이 항상 일정하다면(예: 4번 과정에서 5번 과정으로 넘어가는 구간에서만 발생) 큰 문제는 되지 않지만 실제로는 어디서 일어날 지 알 수가 없고 이것이 문제가 된다. 
+
 # 1.5 스레드 주의 사항
+### 경쟁 상태(Race Condition), 데이터 레이스(Data Race)
+스레드 2개가 값 하나에 동시에 접근하는 경우를 보자. 
+```c++
+int main() {
+ // 
+ int a = 0;
+ int count = 10'0000;
 
-임계 영역과 뮤텍스<br/>
-경쟁 상태를 해결하는 여러 방법 중 하나는 다음과 같다.<br/>
+ // 스레드 1
+ thread t1([]() {
+  for (int i = 0; i < count; i++) {
+   a++;
+  }
+ });
+ // 스레드 2
+ thread t2([]() {
+  for (int i = 0; i < count; i++) {
+   a++;
+  }
+ })
 
-교착 상태 <br/>
-교착 상태 혹은 데드락<br/>
+ t1.join();
+ t2.join();
 
-잠금 순서의 규칙<br/>
+ //
+ cout << a << endl;
+}
+```
+공용으로 접근하는 변수 a = 0에서 시작하고 스레드 1, 2가 각각 10만 번씩 연산해서 모든 스레드가 끝난 후 a값을 조회하면 20만이 나올 것 같지만 실제로는 20만 보다 훨씬 미달하는 값이 나온다. 왜 그렇게 될까?<br/>
+
+위에서 우리는 a++와 같은 c++에서 하는 연산이 기계 명령어로는 여러 개로 이루어진다는 것을 알았다. 
+```
+r1 = a (1)
+r2 = r1 + 1 (2)
+a = r (3)
+```
+위에서 1~3번 구간 중 어디에서든 컨텍스트 스위치가 일어날 수 있다. 그로 인해 아래와 같은 상황이 나온다.
+```
+// 스레드 1
+r1 = a(0)
+
+// 스레드 2
+r3 = a(0)
+r4 = r3(0) + 1
+a = 1 // 메모리 a의 값이 스레드 2에 의해서 1로 변경
+
+// 스레드 1
+r2 = r1(0) + 1 
+a = 1 // 스레드 1에서 레지스터의 값으로 a를 변경
+```
+어느 스레드에서 작업하고 있는 값을 다른 스레드에서 변경을 하고 있고 이러한 문제 때문에 원하는 값이 도출되지 않는다.
+이러한 경우를 경쟁 상태, 데이터 레이스라고 한다.
+
+### 임계 영역(Critical Section)과 뮤텍스(Mutex)
+경쟁 상태(Race Condition)를 해결하는 여러 방법 중 하나는 어떤 스레드에서 x에 액세스하는 동안 다른 스레드에서는 x에 액세스하지 못하게 하는 것이다. 이때 사용하는 것이 뮤텍스이다. 뮤텍스는 상호 배제(Mutual Exclusion)의 줄임말이며 사용하는 방법은 다음과 같다.
+```
+x를 보호하는 뮤텍스 mx를 만든다.
+스레드는 x를 건드리기 전에 mx에 사용권을 요청한다.
+스레드는 x에 액세스 한다.
+액세스가 끝나면 mx에 사용권을 반환한다.
+
+실제 코드로는 아래와 같다.
+std::mutex mx; // (1) 뮤텍스 생성
+mx.lock(); // (2) 뮤텍스 권한 획득
+x = x + 1; // (3) 연산
+mx.unlock(); // (4) 뮤텍스 권한 해제
+```
+(2) 번 과정에서 스레드1이 권한을 획득하려고 하는데 스레드2가 이미 선점했다면 스레드1은 스레드2가 작업을 완료하고 권한을 반환할 때까지 대기하게 된다. 그런데 위와 같이 매번 잠그고(lock) 풀고(unlock)하는 것을 호출하는 것은 번거로울 뿐만 아니라 예외 처리 코드도 작성하기 힘들게 한다. 위의 코드를 수행하다가 3번 구간에서 c++에서 예외를 던지면 뮤텍스를 해제하는 4번 과정은 실행되지 못하고 다른 스레드는 진입할 수 없게 된다. 이를 해결하려면 try-catch 구문으로 감싸서 예외가 발생하더라도 잠금 해제(unlock)를 할 수 있어야 한다. 벌써 귀찮다. 그래서 아래와 같이 하게 된다.
+```c++
+std::mutex m;
+{
+ // 블록 내에서 객체 lock 생성, 이 구간 벗어나면 소멸, lock_guard 소멸 시에 락 해제
+ std::lock_guard<std::mutex> lock(m);
+ cal(x);
+}
+```
+
+### 교착 상태(데드락, Deadlock)
+멀티스레드 프로그래밍에서 교착 상태란 두 스레드가 서로를 기다리는 상황을 의미한다.
+```c++
+int main() {
+ mutex m1;
+ mutex m2;
+
+ thread t1( [&]() {
+  m1.lock(); // m1 락 획득
+  this_thread::sleep_for(chrono::seconds(3)); // 3초 대기
+  m2.lock(); // m2 락 획득 시도
+ });
+ thread t2( [&]() {
+  m2.lock();
+  this_thread::sleep_for(chrono::seconds(3));
+  m1.lock();
+ });
+
+ t1.join();
+ t2.join();
+}
+```
+위와 같은 경우에 데드락이 발생한다. t1이 m1을 획득한 상태에서 m2를 원하고 t2가 m2를 획득한 상태에서 m1을 원하고 있다. 서로가 원하는 락을 서로 가지고 있고 놔주지 않기에 더 이상 작업이 진전되지 않고 현 상황을 유지하게 된다. <br/>
+
+게임 서버에서 교착 상태가 되면 발생하는 현상은 다음과 같다.
+* cpu 사용량이 현저히 낮거나 0%
+* 반응이 없음. 뭔가 요청을 보냈는데 응답을 안함.
+
+교착 상태가 발생했을 때 디버거로 원인을 찾는 방법을 알아보자. 
+
+### 잠금 순서 규칙
+여러 뮤텍스를 사용할 때 교착 상태(데드락)를 예방하려면 각 뮤텍스의 잠금 순서를 먼저 그래프로 그려두어야 한다. 그리고 잠금을 할 때는 잠금 순서 그래프를 보면서 거꾸로 잠근 것이 없는지 체크해야 한다. <br/>
+
+뮤텍스 A, B, C가 있고 A->B->C 순으로 잠근다고 할 때 코드는 아래와 같아야 한다.
+```
+lock(A)
+lock(B)
+lock(C)
+unlock(C)
+unlock(B)
+unlock(A)
+```
+
+또는 이런 경우도 괜찮다.
+```
+// A->B
+lock(A)
+lock(B)
+unlock(B)
+unlock(A)
+
+// B->C
+lock(B)
+lock(C)
+unlcok(C)
+unlock(B)
+
+// 심지어 A->C도 안전하다.
+lock(A)
+lock(C)
+unlock(C)
+unlock(A)
+```
+B->A, C->A와 같은 순서 역행만 아니면 된다. 조금 더 복잡한 예를 살펴보자. 재귀 뮤텍스라는 것이 있다. 
+
+
+
+
+
 여러 뮤텍스를 사용할 때 교착 상태를 예방<br/>
 
 병렬성과 시리얼 병목<br/>
