Update 1.4 스레드의 정체.md

--- a/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
@@ -173,7 +173,7 @@ int main() {
 * 반응이 없음. 뭔가 요청을 보냈는데 응답을 안함.
 
 교착 상태가 발생했을 때 디버거로 원인을 찾는 방법을 알아보자. 
-
+교착 상태 발생 -> 디버그 중지 -> 메뉴로 이동 -> debug -> windows -> threads -> 
 ### 잠금 순서 규칙
 여러 뮤텍스를 사용할 때 교착 상태(데드락)를 예방하려면 각 뮤텍스의 잠금 순서를 먼저 그래프로 그려두어야 한다. 그리고 잠금을 할 때는 잠금 순서 그래프를 보면서 거꾸로 잠근 것이 없는지 체크해야 한다. <br/>
 
@@ -209,14 +209,12 @@ unlock(A)
 ```
 B->A, C->A와 같은 순서 역행만 아니면 된다. 조금 더 복잡한 예를 살펴보자. 재귀 뮤텍스라는 것이 있다. 
 
-
-
-
-
-여러 뮤텍스를 사용할 때 교착 상태를 예방<br/>
-
-병렬성과 시리얼 병목<br/>
+### 병렬성과 시리얼 병목
 뮤텍스가 보호하는 영역이 너무 넓으면 스레드가 여럿이라 하더라도 하나일 때와 별반 차이가 없다. 여러 CPU가 각 스레드의 연산을 실행하여 동시 처리량을 올리는 것을 병렬성(parallelism)이라 한다. 그런데 어떤 이유로 이러한 병렬성이 제대로 나오지 않는 것, 즉 병렬로 실행되게 프로그램을 만들었는데 일부만 연산을 수행하는 현상을 시리얼 병목(bottleneck)이라고 한다. <br/>
+
+병목이 있을 때 cpu 개수가 많을수록 총 처리 효율성이 떨어지는 현상을 암달의 법칙(Amdahl's Law) 또는 암달의 저주라고 한다.
+
+
 
 싱글스레드 게임 서버<br/>
 멀티스레드 게임 서버<br/>
