Update 1.4 스레드의 정체.md

--- a/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
@@ -315,9 +315,29 @@ atomic
 원자 조작(atomic operation)은 뮤텍스나 임계 영역 잠금 없이도 여러 스레드가 안전하게 접근할 수 있는 것을 의미한다. 원자 조작은 하드웨어 기능이며, 대부분의 컴파일러는 원자 조작 기능을 쓸 수 있게 한다. 원자 조작은 32비트나 64비트의 변수 타입에 여러 스레드가 접근할 때 한 스레드씩만 처리됨을 보장한다. <br/>
 
 ## 멀티스레드 프로그래밍 유의점
-### 읽기와 쓰기 모두에 잠금하지 않기
+### 읽기와 쓰기 모두에 잠금을 하지 않음
+메모리에 값을 쓰고 있는데 다른 스레드가 그것을 읽으면 망가질 수 있다는 것은 인지하지만, 그냥 값을 읽고만 있으면 잠금을 하지 않더라도 안전하다는 막연한 생각 때문에 발생한다.
+
+```c++
+void func1() {
+ // lock(mutex_a); 누락
+ print(a);
+}
+
+void func2() {
+ lock(mutex_a);
+ a = a + 10;
+}
+```
+
 ### 잠금 순서
+앞에서 살펴본 데로 잠금 순서를 지키면 되지만 프로그램 규모가 커지면 이 규칙을 준수하는 것이 생각보다 어렵다. 제일 좋은 것은 잠금 순서 규칙을 최대한 적게 유지하는 것이다.
+
 ### 잠금 범위
+잠금 객체 범위가 너무 넓으면 컨텍스트 스위치가 발생할 때 운영체제가 해야 할 일이 매우 많아진다. 그리고 병렬성이 떨어지기에 멀티스레드 프로그래밍의 이유가 퇴색된다. <br/>
+
+잠금 범위를 좁히면 컨텍스트 스위치의 확률이 떨어지기는 한다. 
+
 ### 디바이스 타임이 섞인 잠금 피하기
 ### 잠금 전염성
 ### 잠금된 뮤텍스 삭제
