Update 1.4 스레드의 정체.md

--- a/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
@@ -295,24 +295,28 @@ condition_variable
 뮤텍스는 오로지 스레드 1개만 자원을 액세스할 수 있게 한다. 하지만 세마포어는 원하는 개수의 스레드가 자원을 액세스할 수 있게 한다. 
 
 ## 원자 조작 (Atomic Operation)
-atomic
-뮤텍스가 명령어 구간에 대해서 잠금을 거는 느낌이라면 ㅇ
+원자 조작은 하드웨어 기능이며 대부분의 컴파일러는 이 기능을 지원한다. 뮤텍스가 본인(뮤텍스 객체)을 통해서 스레드의 접근을 제한하는 느낌이라면 원자 조작은 어떤 변수 자체를 동기화 객체로 만드는 느낌이다. <br/>
 
-사용 방법은 아래와 같다.
+앞서 설명할 때 a++ 또는 a += 1 등의 c++ 구문들이 기계 명령어에서 여러 코드로 나누어지고 그 여러 구간 중에서 어디에서든 컨텍스트 스위치가 일어날 수 있기에 문제가 된다고 했다. 원자 조작은 해당 과정을 전부 다 수행하고 컨텍스트 스위치가 일어날 수 있도록 처리된 함수를 제공한다.<br/>
+
+c++에서 사용할 때 아래와 같은 흐름으로 사용하게 된다.
+```c++
+int main() {
+ // atomic 객체 생성
+ atomic<int> var;
+
+ // atomic 함수 사용 - 보호됨
+ var.fetch_add(1);
+
+ // atomic 객체에서 함수 사용 안하고 그냥 연산 - 보호 안됨
+ var = 5;
+}
 ```
-원자성 변수 선언
 
-
-
-```
-
-원자 조작은 하드웨어 기능이며 대부분의 컴파일러는 원자 조작 기능을 쓸 수 있게 한다. 원자 조작은 32비트나 64비트의 변수 타입에 여러 스레드가 접근할 때 한 스레드씩만 처리됨을 보장한다.
-
-* 원자성을 가진 값 더하기
-* 
-
-
-원자 조작(atomic operation)은 뮤텍스나 임계 영역 잠금 없이도 여러 스레드가 안전하게 접근할 수 있는 것을 의미한다. 원자 조작은 하드웨어 기능이며, 대부분의 컴파일러는 원자 조작 기능을 쓸 수 있게 한다. 원자 조작은 32비트나 64비트의 변수 타입에 여러 스레드가 접근할 때 한 스레드씩만 처리됨을 보장한다. <br/>
+원자 조작의 기능은 대체로 아래와 같다.
+* 원자값 증가, 감소(이하 전부 c++ 기준 함수, fetch_add, fetch_sub)
+* 원자값 변경(exchange)
+* 원자값 조건부 변경(compare_exchange_strong
 
 ## 멀티스레드 프로그래밍 유의점
 ### 읽기와 쓰기 모두에 잠금을 하지 않음
@@ -339,7 +343,13 @@ void func2() {
 잠금 범위를 좁히면 컨텍스트 스위치의 확률이 떨어지기는 한다. 
 
 ### 디바이스 타임이 섞인 잠금 피하기
-### 잠금 전염성
+디바이스 타임이 있는 곳에 다른 스레드가 자주 접근하는 리소스에 대한 잠금을 하지 말아야 한다. 한 가지 예로 로그 출력이나 콘솔 출력이 있다. <br/>
+
+우리에게 매우 익숙한 콘솔 출력 함수(printf, cout)는 사실 운영체제 안에서 꽤 무거운 일을 한다. 커맨드 라인 출력은 MS-DOS에서 제공하는 인터럽트나 BIOS 인터럽트의 형태로 이루어지고 통상적인 게임 로직 연산 처리보다 훨씬 많은 시간을 차지한다. 그 밖에도 디스크나 네트워크 I/O의 디바이스 타임이 있다. 동시 접속자는 많은데 게임 서버에서 CPU 사용량이 적게 나오는 경우, 이 때문에 문제가 난다고 보면 된다고 한다. 
+
+### 잠금 전염성으로 발생한 실수
+멀티스레딩을 할 때 동기화되는 구간을 최대한 줄이기 위해 잠금으로 보호되는 리소스 값을 스택영역으로 가져온 뒤에 동기화를 해제하고 쓰고는 한다. 잠금 영역의 내용을 로컬로 가져오더라도 잠금을 유지해야 하는 경우에 대한 얘기이다.
+
 ### 잠금된 뮤텍스 삭제
 ### 일관성 규칙 깨기
 
