Update 1.4 스레드의 정체.md

--- a/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
@@ -274,32 +274,42 @@ unlock(C) -> unlock(B) -> unlock(A)
 * 서버에서 데이터베이스나 파일 등 다른 것에 액세스하면서 디바이스 타임이 발생할 때 스레드 개수는 CPU 개수보다 많아야 한다.
 
 ## 이벤트
-스레드를 대기 상태로 두다가 특정 시점에 깨워주는 것으로 윈도우에서 사용할 수 있는 방식으로 두 가지가 있다.
-
+동기화 개체로서 여러 스레드 간에 특정 사건이 발생했음을 알리거나, 특정 이벤트가 발생할 때까지 스레드를 대기시키는데 사용된다.
+2가지 방법이 있다.
 ### condition_variable(조건 변수)
 * c++ 11 이상 표준 라이브러리에서 제공함으로 플랫폼이 변경되어도 사용 가능
 * 유저 모드에서 동작하므로 가볍고 빠름
 * mutex와 같이 사용
-* 
 
-### Win32 Event object
+```c++
+// 간단 예제로 이해
+
+```
+
+win32 이벤트 객체는 커널 모드로 사용되는 객체로 유저 모드로 사용되는 condition_variable이 더 가볍기에 condition_variable을 사용하는 것이 더 좋다고 한다. 다만 condition_variable은 스레드를 깨우는 역할만 하므로 동기화를 걸어주는 mutex와 같이 사용해야 한다.
+
+### Win32 API Event object(win32 이벤트 객체)
 * Windows OS API에서 제공함으로 윈도우즈 전용
 * 커널 모드 객체
 * 단독 사용
 
+```c++
+// CreateEvent : 이벤트 객체를 생성한다.
+// CloseHandle : 이벤트 객체를 파괴한다.
+// WaitForSingleObject : 이벤트를 기다린다.
+// SetEvent : 이벤트에 신호를 준다.
 
-condition_variable
+```
 
+수동 모드(manual reset)와 자동 모드(auto reset) 2가지 방식이 있고 
 
 ## 세마포어
 뮤텍스는 오로지 스레드 1개만 자원을 액세스할 수 있게 한다. 하지만 세마포어는 원하는 개수의 스레드가 자원을 액세스할 수 있게 한다. 
 
-## 원자 조작 (Atomic Operation)
-원자 조작은 하드웨어 기능이며 대부분의 컴파일러는 이 기능을 지원한다. 뮤텍스가 본인(뮤텍스 객체)을 통해서 스레드의 접근을 제한하는 느낌이라면 원자 조작은 어떤 변수 자체를 동기화 객체로 만드는 느낌이다. <br/>
+## 원자적 연산 (Atomic Operation)
+원자적 연산이란 연산이 중간에 중단되지 않고 전부 성공하거나 혹은 전혀 수행되지 않는 특성을 가지는 연산으로 앞에서 배운 c++에서의 a++;이라는 구문이 기계 명령어로 한 구문이 아니며 그 구간내에서 어디서 컨텍스트 스위칭이 발생할 지 모르기에 문제가 될 수 있다고 했는데 원자적 연산은 모든 연산이 수행되는 것을 보장한다.<br/>
 
-앞서 설명할 때 a++ 또는 a += 1 등의 c++ 구문들이 기계 명령어에서 여러 코드로 나누어지고 그 여러 구간 중에서 어디에서든 컨텍스트 스위치가 일어날 수 있기에 문제가 된다고 했다. 원자 조작은 해당 과정을 전부 다 수행하고 컨텍스트 스위치가 일어날 수 있도록 처리된 함수를 제공한다.<br/>
-
-c++에서 사용할 때 아래와 같은 흐름으로 사용하게 된다.
+c++에서 atomic 객체를 만들어서 atomic 객체가 제공하는 함수를 사용하는 방식으로 사용하게 되며 아래와 같이 사용하게 된다.
 ```c++
 int main() {
  // atomic 객체 생성
@@ -313,7 +323,7 @@ int main() {
 }
 ```
 
-원자 조작의 기능은 대체로 아래와 같다.
+원자적 연산이 제공하는 연산
 * 원자값 증가, 감소(이하 전부 c++ 기준 함수, fetch_add, fetch_sub)
 * 원자값 변경(exchange)
 * 원자값 조건부 변경(compare_exchange_strong
