--- a/게임서버프로그래밍교과서/네트워크/네트워크 기초.md
+++ b/게임서버프로그래밍교과서/네트워크/네트워크 기초.md
@@ -1,1 +1,33 @@
-d
+컴퓨터 네트워크는 크게 단말기와 네트워크 기기로 구성된다. 쉽게, 단말기는 컴퓨터이고 네트워크 기기는 네트워크 스위치이다. 네트워크 스위치 하나를 사이에 두고 별 모양으로 단말기들이 연결되어 있는 것을 흔히 로컬 지역 네트워크(LAN)이라고 한다. <br/>
+
+# OSI(Open Systems Interconnection reference) 모델
+컴퓨터 네트워크 통신에 대한 국제 표준이다. 이 표준만 잘 지키면 어떤 기기든, 어떤 형태의 통신 선로를 사용하든 컴퓨터 간 통신을 할 수 있다. LAN은 OSI 모델의 2 계층(Layer)에 속하고 2계층의 규칙을 지켜준다면 회선이 랜선이든 무선이든 전화선이든 레이저든 상관없이 통신할 수 있다.
+
+### 물리 계층(계층 1)
+하드웨어를 다룬다. 예를 들어 데이터를 어떤 파형의 전류로 보낼지 등을 정의한다.
+### 데이터 링크 계층(2)
+LAN에서 통신을 가능하게 한다.
+### 네트워크 계층(3)
+WAN(광역 통신망)에서 통신을 가능하게 한다.
+### 전송 계층(4)
+
+### 세션(5), 표현(6), 응용(7)
+응용 프로그램이나 운영체제 안 모듈이 다른 컴퓨터의 응용 프로그램이나 운영체제 모듈과 통신을 하는 동안 논리적 연결 단위나 기능들은 계층 5~7에서 다룬다. 우리가 만드는 게임 서버 프로그램도 이 5~7 중 어딘가를 정의하는 것이다.
+
+## OSI 모델 계층 2 (데이터 링크)
+* 각 단말기는 고유한 주소를 갖는다.
+* 단말기는 데이터를 프레임(frame)이라는 단위로 주고 받는다.
+
+## OSI 모델 계층 3 (네트워크)
+ㅇㅇㅇ
+
+# 컴퓨터 네트워크 데이터
+OSI 모델의 계층 2에서는 데이터 단위를 프레임이라 했고 계층 3에서는 패킷이라고 했다. 그렇지만 네트워크나 서버 앱을 개발할 때는 이를 직접 다룰 일이 흔하지는 않다. 그 대신 스트림과 메시지라는 것을 주로 다룬다.
+
+## 스트림 형식
+
+
+
+
+
+
