--- a/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
@@ -268,17 +268,24 @@ unlock(C) -> unlock(B) -> unlock(A)
 멀티스레드 게임 서버<br/>
 
 ## 스레드 풀링
-멀티스레드 모델의 게임 서버를 만들 때 스레드를 몇 개 사용해야할까? 일단 스레드를 만들면 호출 스택이라는 것이 있다. 이 호출 스택의 크기는 작게는 수십 KB에서 수 MB에 이르고 스레드가 5000개이고 각 호출 스택 크기가 1MB라면 필요한 메모리는 5000MB가 된다. 하지만 이보다 더 큰 문제는 심각하게 발생하는 컨텍스트 스위치이다. 게임 서비스의 특성상 클라이언트는 서버와 통신하는 횟수가 잦고 클라이언트 5000개가 1초당 100회씩 처리해야 하는 이벤트가 발생한다면 서버에서는 1초에 50만 번 스레드가 "깨어났다 잤다"를 반복할 것이다.<br/>
+일단 스레드를 만들면 호출 스택이라는 것이 있다. 이 호출 스택의 크기는 작게는 수십 KB에서 수 MB에 이르고 스레드가 5000개이고 각 호출 스택 크기가 1MB라면 필요한 메모리는 5000MB가 된다. 하지만 이보다 더 큰 문제는 심각하게 발생하는 컨텍스트 스위치이다. 게임 서비스의 특성상 클라이언트는 서버와 통신하는 횟수가 잦고 클라이언트 5000개가 1초당 100회씩 처리해야 하는 이벤트가 발생한다면 서버에서는 1초에 50만 번 컨텍스트 스위치가 발생한다. <br/>
 
+### CPU 코어 개수 > 스레드 개수
+CPU가 8코어인데 스레드가 6개라면 많은 일이 들어오면 스레드를 최대 6개를 병렬로 사용한다. 결과적으로 컴퓨터의 최대 CPU 처리 능력의 6/8만 사용한다.
+
+### CPU 코어 개수 < 스레드 개수
+CPU가 8코어인데 스레드가 10개라면 최대 8개가 병렬로 사용될 수 있고 나머지는 컨텍스트 스위치를 하면서 사용된다. 컨텍스트 스위치는 운영체제 안에서 많은 연산(*)이 필요하므로 결과적으로 매우 나쁜 처리 속도를 내게 된다.
+
+* 앞에서 언급한 내용으로 운영체제나 CPU 같은 환경에 따라서 다르지만, 컨텍스트 스위치가 발생하여 스레드가 일시 정지했다 다시 시작하는 데까지 걸리는 시간은 약 5ms로, 초당 5억 개의 명령어를 수행할 수 있는 CPU라면 250만 개의 명령어를 처리할 수 있는 충분히 긴 시간이라는 것이다.
+
+### 그래서 어떻게?
 스레드가 CPU 코어의 개수보다 적다면 CPU의 자원을 풀로 사용할 수 없고 스레드가 CPU 코어의 개수보다 많다면 컨텍스트 스위치가 발생하여 오히려 손해가 된다. <br/>
 
-그래서 스레드 개수와 CPU 코어 개수를 맞추면 끝? <br/>
-CPU 코어가 8개, 스레드가 8개 있는 환경에서 만약 일을 처리하는 총 시간의 1/4가 CPU 연산이고 3/4가 CPU가 잠자는 시간이라면 CPU가 일을 배정받을 수 있는 시간이 3배 더 남는 셈이고 이 경우 스레드의 개수를 CPU 개수의 3배, 즉 32개 배정하는 것이 적절하다는 계산이 나온다. <br/>
+CPU 코어 개수와 스레드 개수를 8개로 맞춘 환경에서 만약 일을 처리하는 총 시간의 1/4가 CPU 연산이고 3/4가 CPU가 잠자는 시간이라면 CPU가 일을 배정받을 수 있는 시간이 3배 더 남는 셈이고 이 경우 스레드의 개수를 CPU 개수의 3배, 즉 32개 배정하는 것이 적절하다는 계산이 나온다. <br/>
 
 요약하자면 코어 개수와 스레드 개수의 관계에 대해 다음 규칙을 도출할 수 있다.
-### 어떤 서버의 주 역할이 CPU 연산만 하는 스레드라면(즉, 디바이스 타임이 없다면) 스레드 풀의 개수는 서버의 CPU 개수와 동일하게 잡아도 충분하다.
-
-### 서버에서 DB나 파일 등 다른 것에 액세스하며 디바이스 타임이 발생할 때 스레드 개수는 CPU 개수보다 많아야 한다.
+* 어떤 서버의 주 역할이 CPU 연산만 하는 스레드라면(즉, 디바이스 타임이 없다면) 스레드 풀의 개수는 서버의 CPU 개수와 동일하게 잡아도 충분하다.
+* 서버에서 DB나 파일 등 다른 것에 액세스하며 디바이스 타임이 발생할 때 스레드 개수는 CPU 개수보다 많아야 한다.
 
 ## 이벤트
 동기화 개체로서 여러 스레드 간에 특정 사건이 발생했음을 알리거나, 특정 이벤트가 발생할 때까지 스레드를 대기시키는데 사용된다.
