Update 1.4 스레드의 정체.md

--- a/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/1.4 스레드의 정체.md
@@ -279,13 +279,13 @@ CPU가 8코어인데 스레드가 10개라면 최대 8개가 병렬로 사용될
 * 앞에서 언급한 내용으로 운영체제나 CPU 같은 환경에 따라서 다르지만, 컨텍스트 스위치가 발생하여 스레드가 일시 정지했다 다시 시작하는 데까지 걸리는 시간은 약 5ms로, 초당 5억 개의 명령어를 수행할 수 있는 CPU라면 250만 개의 명령어를 처리할 수 있는 충분히 긴 시간이라는 것이다.
 
 ### 그래서 어떻게?
-스레드가 CPU 코어의 개수보다 적다면 CPU의 자원을 풀로 사용할 수 없고 스레드가 CPU 코어의 개수보다 많다면 컨텍스트 스위치가 발생하여 오히려 손해가 된다. <br/>
+스레드가 cpu 코어의 개수보다 적다면 cpu의 자원을 풀로 사용할 수 없고 스레드가 cpu 코어의 개수보다 많다면 컨텍스트 스위치가 발생하여 오히려 손해가 된다. 그렇다면 스레드 개수와 cpu 개수를 동일하게 하면 되는가.<br/>
 
-CPU 코어 개수와 스레드 개수를 8개로 맞춘 환경에서 만약 일을 처리하는 총 시간의 1/4가 CPU 연산이고 3/4가 CPU가 잠자는 시간이라면 CPU가 일을 배정받을 수 있는 시간이 3배 더 남는 셈이고 이 경우 스레드의 개수를 CPU 개수의 3배, 즉 32개 배정하는 것이 적절하다는 계산이 나온다. <br/>
+cpu 코어 개수와 스레드 개수를 8개로 맞춘 환경에서 만약 일을 처리하는 총 시간의 1/4가 cpu 연산이고 3/4가 cpu가 잠자는 시간이라면 cpu가 일을 배정받을 수 잇는 시간이 3배 더 남는 셈이고 이 경우 스레드의 개수를 cpu 개수의 3배, 즉 32개 배정하는 것이 적잘하다는 계산이 나온다. 이 작업은 cpu 바운드 작업(어떤 작업의 주된 처리가 cpu 작업에 해당하고 그 작업의 완료가 cpu에 달린 작업)이 아니므로 스레드의 개수를 cpu 개수보다 더 많게 하는 것이 좋다.
 
-요약하자면 코어 개수와 스레드 개수의 관계에 대해 다음 규칙을 도출할 수 있다.
-* 어떤 서버의 주 역할이 CPU 연산만 하는 스레드라면(즉, 디바이스 타임이 없다면) 스레드 풀의 개수는 서버의 CPU 개수와 동일하게 잡아도 충분하다.
-* 서버에서 DB나 파일 등 다른 것에 액세스하며 디바이스 타임이 발생할 때 스레드 개수는 CPU 개수보다 많아야 한다.
+따라서 아래와 같이 규칙을 도출할 수 있다.
+* 어떤 서버의 작업이 cpu 바운드라면 cpu의 개수를 스레드 수와 동일하게 하여 cpu를 모두 활용할 수 있고 컨텍스트 스위치를 줄이는 것이 좋다.
+* 어떤 서버의 작업이 i/o 바운드라면 cpu의 개수보다 스레드 수를 더 늘리는 것이 좋다.
 
 ## 이벤트
 동기화 개체로서 여러 스레드 간에 특정 사건이 발생했음을 알리거나, 특정 이벤트가 발생할 때까지 스레드를 대기시키는데 사용된다.
