Update 스레드 생명 주기.md

--- a/게임서버프로그래밍교과서/멀티스레딩/스레드 생명 주기.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/스레드 생명 주기.md
@@ -2,9 +2,10 @@
 "생성, 종료, 실행, 실행 대기, 일시 정지"와 같은 상태들이 있다. os와 언어(c++, java) 등에 따라서 조금씩 다르게 설명하지만 큰 맥락은 비슷하다.
 여기서는 c++ 기준으로 설명한다. <br/>
 
-### 상태 도식화
+## 상태 도식화
 <img width="464" height="188" alt="image" src="https://github.com/user-attachments/assets/26c88224-8773-4ed7-9163-a0ac00e36360" /><br/>
 
+## 스레드 상태
 #### 생성 (New)
 * std::thread()를 통해 스레드를 생성하고 c++에서는 스레드 객체를 생성하면 바로 실행된다.
 
@@ -42,3 +43,34 @@
 ##### detach()
 * 스레드를 백그라운드로 실행, 더 이상 제어할 수 없음.
 * OS가 알아서 종료 시 리소스를 해제.
+
+## 추가 내용
+### 운영체제에서 스레드 스케줄링과 동기화 객체 처리(Runnable <-> Blocked)
+```c++
+std::mutex m;
+
+void f() {
+  std::lock_guard<std::mutex> lock(m);
+}
+```
+#### 1. 경합 발생 시 상태 전이
+* A 스레드가 m.lock()을 성공적으로 획득 -> Running 상태.
+* B 스레드가 같은 m.lock() 호출 -> A가 이미 락 소유 중 -> 커널은 B를 뮤텍스 대기 큐(wait queue)에 넣음 -> Blocked 상태
+* C 스레드도 m.lock() 요청하면 -> B 뒤에 붙음 -> 역시 Blocked.
+
+#### 2. 락 해제 시
+A 스레드가 m.unlock()을 호출하면, 커널은 대기 큐에서 하나의 스레드만 꺼내서 ready queue로 이동 -> Runnable 상태 -> 스케줄러가 cpu 배정 -> Running 상태
+
+#### 3. 여러 스레드가 경합 중일 때
+* B, C, D가 다 뮤텍스 락을 대기?
+* A가 unlock -> B가 Runnable
+* B가 Running -> lock 소유
+* B가 unlock -> C가 Runnable
+
+#### 4. 추가 내용
+뮤텍스 대기 큐에서 어떤 스레드를 깨우느냐는 운영체제 정책에 따라 다르다.
+
+#### 5. 요약
+* mutex 경합 시 -> 밀린 스레드는 Blocked.
+* 소유자가 unlock하면 -> Blocked 중 하나만 Ready(Runnable).
+
