--- a/게임서버프로그래밍교과서/멀티스레딩/스레드 생명 주기.md
+++ b/게임서버프로그래밍교과서/멀티스레딩/스레드 생명 주기.md
@@ -6,17 +6,17 @@
 <img width="464" height="188" alt="image" src="https://github.com/user-attachments/assets/26c88224-8773-4ed7-9163-a0ac00e36360" /><br/>
 
 ## 스레드 상태
-#### 생성 (New)
+#### 1) 생성 (New)
 * std::thread()를 통해 스레드를 생성하고 c++에서는 스레드 객체를 생성하면 바로 실행된다.
 
-#### 실행 대기 (Runnable)
+#### 2) 실행 대기 (Runnable)
 * 스레드가 실행될 준비가 되었지만 아직 CPU 스케줄링이 되지 않아 실행 대기 상태에 있는 것.
 * 운영체제의 ready queue에 들어가서 cpu를 할당받는 것을 대기.
 
-#### 실행 (Running)
+#### 3) 실행 (Running)
 * cpu 할당받아 실제로 작업을 하는 상태.
 
-#### 일시 정지 (Blocked/Waiting)
+#### 4) 일시 정지 (Blocked/Waiting)
 스레드가 I/O 대기, lock 대기 등으로 잠시 실행 불가능한 상태.
 ##### Waiting
 * 정지(wait)시키고 신호(notify)를 줘서 깨우는 것.
@@ -31,7 +31,7 @@
 * OS 내부적으로 WaitQueue(락 대기열)에 등록.
 * 뮤텍스 소유자가 unlock을 하면 대기 중인 스레드 중 1가 ready queue로 이동하여 runnable이 됨.
 
-#### 소멸 (Terminated)
+#### 5) 소멸 (Terminated)
 * 스레드가 함수 끝까지 실행되거나 return을 만나서 종료.
 * OS 스레드 객체는 죽었지만 std::thread 객체는 아직 살아 있음.
 * join()이나 detach()를 통해 std::thread 객체를 정리해야 한다.(명시를 안하면 std::terminate()가 호출된다., c++ 표준)
