--- a/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
+++ b/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
@@ -1,1 +1,17 @@
-d
+
+## 물리 주소
+실제 메모리 하드웨어 상의 주소
+
+## 논리 주소
+CPU와 프로세스 기준에서의 주소. 
+실행 중인 프로그램 각각에게 부여된 0번지부터 시작하는 주소.
+
+<img width="849" height="357" alt="image" src="https://github.com/user-attachments/assets/c903b1e4-61e1-4522-a28c-03f99cd3a09e" />
+
+## 물리 주소와 논리 주소의 변환
+CPU의 MMU(Memory Management Unit, 메모리 관리 장치)라는 하드웨어에 의해 변환된다. 
+CPU가 이해하는 주소는 논리 주소이고 주소버스를 통해 CPU로 들어오고 나갈 때 그 사이에서 MMU가 변환한다.
+
+논리 주소와 베이스 레지스터(= 프로그램의 시작 물리 주소) 값을 더하여 논리 주소를 물리 주소로 변환.
+<img width="756" height="363" alt="image" src="https://github.com/user-attachments/assets/46efc149-0bd7-41d1-8ac9-c178f3c821a9" />
+
