--- a/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
+++ b/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
@@ -1,17 +1,49 @@
+## 메모리
+<img width="650" height="350" alt="image" src="https://github.com/user-attachments/assets/c903b1e4-61e1-4522-a28c-03f99cd3a09e" /><br/>
+### 물리 주소
+* 메모리 하드웨어 상의 실제 주소
+### 논리 주소
+* CPU와 프로세스 관점에서의 가상 주소
+* 실행 중인 프로그램 각각에게 부여된 0번지부터 시작하는 주소
 
-## 물리 주소
-실제 메모리 하드웨어 상의 주소
 
-## 논리 주소
-CPU와 프로세스 기준에서의 주소. 
-실행 중인 프로그램 각각에게 부여된 0번지부터 시작하는 주소.
+## 물리 주소<->논리 주소 간의 변환
+* CPU와 프로세스는 논리 주소를 사용한다. 
+* 실제로 메모리에 액세스하기 위해서는 논리 주소 -> 물리 주소 변환 필요
+  * 이거를 MMU가 담당한다.
+ 
+### MMU (Memory Management Unit, 메모리 관리 장치)
+* CPU 내부에 존재하는 하드웨어 장치
+* 물리<->논리 주소 변환 담당
+* 메모리 보호
+  * 프로세스는 각각 별도의 공간이 있고 이를 침범하면 안됨.
 
-<img width="849" height="357" alt="image" src="https://github.com/user-attachments/assets/c903b1e4-61e1-4522-a28c-03f99cd3a09e" />
+### 주소 변환 방법
+* 베이스 레지스터(Base Register): 프로세스 시작 물리 주소
+* 논리 주소: 시작 주소로부터 얼마나 떨어져있는가(=오프셋)
+* 리미트 레지스터(Limit Register): 프로세스 크기(논리 주소 최대 값)
 
-## 물리 주소와 논리 주소의 변환
-CPU의 MMU(Memory Management Unit, 메모리 관리 장치)라는 하드웨어에 의해 변환된다. 
-CPU가 이해하는 주소는 논리 주소이고 주소버스를 통해 CPU로 들어오고 나갈 때 그 사이에서 MMU가 변환한다.
 
-논리 주소와 베이스 레지스터(= 프로그램의 시작 물리 주소) 값을 더하여 논리 주소를 물리 주소로 변환.
-<img width="756" height="363" alt="image" src="https://github.com/user-attachments/assets/46efc149-0bd7-41d1-8ac9-c178f3c821a9" />
+
+* CPU의 MMU(Memory Management Unit, 메모리 관리 장치)라는 하드웨어에 의해 변환.
+* CPU가 사용하는 주소는 논리 주소
+  * CPU 외부에서 물리 주소 사용 필요
+  * 주소 버스를 타고 CPU로 들어오고 나갈 때 그 사이에서 MMU가 변환.
+
+#### 논리 주소와 베이스 레지스터값을 더하는 연산으로 논리 주소를 물리 주소로 변환한다.
+* 베이스 레지스터(Base Register): 프로세스 시작 물리 주소
+* 논리 주소: 시작 주소로부터 얼마나 떨어졌는지 (=오프셋)
+* 리미트 레지스터(Limit Register): 프로세스 크기(논리 주소 최대 값)
+
+<img width="650" height="350" alt="image" src="https://github.com/user-attachments/assets/46efc149-0bd7-41d1-8ac9-c178f3c821a9" /><br/>
+100(논리 주소) + 15000(베이스 레지스터) = 15100 (실제 물리 주소)<br/>
+
+#### 메모리 보호
+프로세스 간 서로 고유한 메모리 공간이 있고 이를 침범해서는 안 된다. <br/>
+base <= 프로세스 메모리 범위 < base + limit<br/>
+<img width="500" height="350" alt="image" src="https://github.com/user-attachments/assets/ea035379-761c-41de-b16a-40e635ca0c78" /><br/>
+
+
+
+
 
