Update 16. 메모리의 주소 공간-물리 주소와 논리 주소.md

--- a/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
+++ b/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
@@ -1,49 +1,37 @@
-## 메모리
+# 메모리
 <img width="650" height="350" alt="image" src="https://github.com/user-attachments/assets/c903b1e4-61e1-4522-a28c-03f99cd3a09e" /><br/>
 ### 물리 주소
 * 메모리 하드웨어 상의 실제 주소
 ### 논리 주소
 * CPU와 프로세스 관점에서의 가상 주소
-* 실행 중인 프로그램 각각에게 부여된 0번지부터 시작하는 주소
+* 실행 중인 프로그램 각각에게 부여된 0번지부터 시작하는 가상의 주소
 
+### 논리 <-> 물리 주소 변환
+CPU와 프로세스는 가상의 논리 주소를 사용한다. 실제 메모리 주소인 물리 주소에 액세스하기 위해서는 논리 주소와 
+물리 주소간의 변환이 필요하다. 이를 담당하는 것이 MMU이다.
 
-## 물리 주소<->논리 주소 간의 변환
-* CPU와 프로세스는 논리 주소를 사용한다. 
-* 실제로 메모리에 액세스하기 위해서는 논리 주소 -> 물리 주소 변환 필요
-  * 이거를 MMU가 담당한다.
- 
-### MMU (Memory Management Unit, 메모리 관리 장치)
+### MMU(Memory Management Unit, 메모리 관리 장치)
 * CPU 내부에 존재하는 하드웨어 장치
 * 물리<->논리 주소 변환 담당
 * 메모리 보호
-  * 프로세스는 각각 별도의 공간이 있고 이를 침범하면 안됨.
+  * 프로세스는 각자 고유의 공간이 있고 이를 서로 침범해서는 안된다.
+  * 침범할 경우 trap(인터럽트) 발생
 
-### 주소 변환 방법
-* 베이스 레지스터(Base Register): 프로세스 시작 물리 주소
-* 논리 주소: 시작 주소로부터 얼마나 떨어져있는가(=오프셋)
-* 리미트 레지스터(Limit Register): 프로세스 크기(논리 주소 최대 값)
+### 변환 방법
+* Base Register: 프로세스 시작 물리 주소
+* 논리 주소: 시작 주소에서 얼마만큼 떨어져 있는가로 위치 표현(=오프셋)
+* Limit Register: 프로세스 크기(논리 주소 최대 값)
 
+예를 통해 이해해보자.<br/>
+<img width="751" height="347" alt="image" src="https://github.com/user-attachments/assets/5d1240e7-48c3-49d0-991c-c3c51b9febf0" /><br/>
+* 논리 주소 100이라는 것은 시작 주소에서 100만큼 떨어진 곳
+* 베이스 레지스터값(시작 물리 주소)은 15000
+* 실제 물리 주소 15100에 있는 데이터를 삭제
 
+##### MMU가 논리 주소를 물리 주소로 변환하는 방법은 논리 주소와 base register 값을 더하기 연산하는 것
+논리 주소 + base => 물리 주소<br/>
 
-* CPU의 MMU(Memory Management Unit, 메모리 관리 장치)라는 하드웨어에 의해 변환.
-* CPU가 사용하는 주소는 논리 주소
-  * CPU 외부에서 물리 주소 사용 필요
-  * 주소 버스를 타고 CPU로 들어오고 나갈 때 그 사이에서 MMU가 변환.
-
-#### 논리 주소와 베이스 레지스터값을 더하는 연산으로 논리 주소를 물리 주소로 변환한다.
-* 베이스 레지스터(Base Register): 프로세스 시작 물리 주소
-* 논리 주소: 시작 주소로부터 얼마나 떨어졌는지 (=오프셋)
-* 리미트 레지스터(Limit Register): 프로세스 크기(논리 주소 최대 값)
-
-<img width="650" height="350" alt="image" src="https://github.com/user-attachments/assets/46efc149-0bd7-41d1-8ac9-c178f3c821a9" /><br/>
-100(논리 주소) + 15000(베이스 레지스터) = 15100 (실제 물리 주소)<br/>
-
-#### 메모리 보호
-프로세스 간 서로 고유한 메모리 공간이 있고 이를 침범해서는 안 된다. <br/>
+##### limit은 프로세스의 크기를 나타내고 프로세스의 메모리 공간은 다음과 같다.
 base <= 프로세스 메모리 범위 < base + limit<br/>
-<img width="500" height="350" alt="image" src="https://github.com/user-attachments/assets/ea035379-761c-41de-b16a-40e635ca0c78" /><br/>
-
-
-
-
+이를 벗어나면 trap이 발생된다.
 
