--- a/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
+++ b/OS/16. 메모리의 주소 공간-물리 주소와 논리 주소.md
@@ -1,4 +1,5 @@
 # 메모리
+물리 주소, 논리 주소라는 것이 있다.<br/>
 <img width="650" height="350" alt="image" src="https://github.com/user-attachments/assets/c903b1e4-61e1-4522-a28c-03f99cd3a09e" /><br/>
 ### 물리 주소
 * 메모리 하드웨어 상의 실제 주소
@@ -6,32 +7,45 @@
 * CPU와 프로세스 관점에서의 가상 주소
 * 실행 중인 프로그램 각각에게 부여된 0번지부터 시작하는 가상의 주소
 
-### 논리 <-> 물리 주소 변환
-CPU와 프로세스는 가상의 논리 주소를 사용한다. 실제 메모리 주소인 물리 주소에 액세스하기 위해서는 논리 주소와 
-물리 주소간의 변환이 필요하다. 이를 담당하는 것이 MMU이다.
+##### CPU와 프로세스는 가상의 논리 주소를 사용한다. 실제 메모리에 액세스하기 위해서는 변환이 필요하다. 이를 담당하는 것이 MMU이다.
 
 ### MMU(Memory Management Unit, 메모리 관리 장치)
 * CPU 내부에 존재하는 하드웨어 장치
-* 물리<->논리 주소 변환 담당
+* 물리 <-> 논리 주소 변환 담당
 * 메모리 보호
   * 프로세스는 각자 고유의 공간이 있고 이를 서로 침범해서는 안된다.
-  * 침범할 경우 trap(인터럽트) 발생
+  * 침범할 경우 trap(인터럽트) 발생.
 
-### 변환 방법
+### 물리 <-> 논리 주소 변환
 * Base Register: 프로세스 시작 물리 주소
-* 논리 주소: 시작 주소에서 얼마만큼 떨어져 있는가로 위치 표현(=오프셋)
-* Limit Register: 프로세스 크기(논리 주소 최대 값)
+* 논리 주소: 시작 주소로부터 얼마나 떨어져 있는 곳인지(=오프셋)
+* Limit Register: 프로세스의 크기(논리 주소 최대치)
 
-예를 통해 이해해보자.<br/>
 <img width="751" height="347" alt="image" src="https://github.com/user-attachments/assets/5d1240e7-48c3-49d0-991c-c3c51b9febf0" /><br/>
-* 논리 주소 100이라는 것은 시작 주소에서 100만큼 떨어진 곳
-* 베이스 레지스터값(시작 물리 주소)은 15000
-* 실제 물리 주소 15100에 있는 데이터를 삭제
+Base Register는 프로세스의 시작 물리 주소이고 논리 주소는 0부터 시작한다. <br/>
+**논리 주소 0 = 물리 주소 시작 지점이라는 것이고**
 
-##### MMU가 논리 주소를 물리 주소로 변환하는 방법은 논리 주소와 base register 값을 더하기 연산하는 것
-논리 주소 + base => 물리 주소<br/>
+논리 주소는 시작 주소로부터 얼마나 떨어져 있는가를 표현한다. 위에서 프로세스 A의 논리 주소 100을 물리 주소로 바꾸면
+시작 물리 주소 15000에서 100만큼 떨어진 곳 15100이 되며 이를 수식으로 표현하면 아래와 같다.<br/>
+**논리 주소 + base => 물리 주소**
 
-##### limit은 프로세스의 크기를 나타내고 프로세스의 메모리 공간은 다음과 같다.
-base <= 프로세스 메모리 범위 < base + limit<br/>
-이를 벗어나면 trap이 발생된다.
+<img width="509" height="357" alt="image" src="https://github.com/user-attachments/assets/191eb5c5-7dc2-420d-a8b6-ec5df9aac5b3" /><br/>
+limit은 프로세스의 크기이고 이를 가지고 프로세스의 메모리 범위를 표현하면 다음과 같다.<br/>
+**base <= 프로세스 메모리 범위 < base + limit**
+
+### 메모리 보호
+<img width="600" height="450" alt="image" src="https://github.com/user-attachments/assets/b8c65462-1b2c-437c-81c6-39fb13ec6b47" /><br/>
+프로세스는 각자 독립적인 공간을 가지며 다른 프로세스의 공간에 멋대로 침범해서 메모리를 건들면 안 되기 때문에 메모리에
+접근하기 전에 항상 메모리 범위를 검사하게 된다.
+
+
+
+
+
+
+
+
+
+
+
 
