Update 01.블로킹, 논블로킹 소켓.md

--- a/OS/01.블로킹, 논블로킹 소켓.md
+++ b/OS/01.블로킹, 논블로킹 소켓.md
@@ -1,4 +1,21 @@
 # C++ 블로킹 소켓
+소켓을 그냥 생성하면 기본적으로 블로킹 방식으로 동작한다.
+"블로킹"은 디바이스에 처리 요청을 걸어 놓고 응답을 대기하는 함수를 호출할 때 스레드에서 발생하는 대기 현상.
+블로킹이 발생하는 스레드에서는 스레드 상태 block/wait으로 CPU 연산을 하지 않는다.
+
+블로킹 모드의 소켓을 통해 동기I/O 함수(send, recv 등)를 호출하면 소켓의 커널 송수신 버퍼 상황에 따라 Block이 걸린다.
+
+### Send
+유저 버퍼의 데이터를 커널의 송신 버퍼로 복사한 후 운영체제
+
+유저 버퍼의 내용이 커널 송신 버퍼로 복사가 되면 리턴
+소켓 송신 버퍼의 기본 크기는 수천 바이트 ~ 만 바이트
+송신 버퍼에 복사된 데이터는 운영체제에 의해 송신되고 송신 버퍼를 비운다.
+
+
+### Recv
+
+
 ## Client
 ```c++
 #include<iostream>
@@ -138,5 +155,11 @@ int main() {
 u_long mode = 1;
 ioctlsocket(sock, FIONBIO, &mode);
 ```
+
+
+
+출처 : <br/>
+https://marmelo12.tistory.com/287 <br/>
+
 
 
